2000-10-22  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_finish_dynamic_symbol): Don't make 
	PLT entries that could serve as a definition for a weak symbol.

	From 2000-06-05  H.J. Lu  <hjl@gnu.org>
	* elflink.c (_bfd_elf_link_record_dynamic_symbol): Don't flag
	an error when seeing an undefined symbol with hidden/internal
	attribute. It is handled in *_relocate_section ().

	From 2000-05-23  H.J. Lu  <hjl@gnu.org>
	* elf32-i386.c (elf_i386_relocate_section): Don't allow the
	undefined symbol with the non-default visibility attributes.
	* elf-hppa.h (elf_hppa_relocate_section): Likewise.
	* elf32-arm.h (elf32_arm_relocate_section): Likewise.
	* elf32-i370.c (i370_elf_relocate_section): Likewise.
	* elf32-m68k.c (elf_m68k_relocate_section): Likewise.
	* elf32-mcore.c (mcore_elf_relocate_section): Likewise.
	* elf32-mips.c (mips_elf_calculate_relocation): Likewise.
	* elf32-ppc.c (ppc_elf_relocate_section): Likewise.
	* elf32-sparc.c (elf32_sparc_relocate_section): Likewise.
	* elf64-alpha.c (elf64_alpha_relocate_section): Likewise.
	* elf64-sparc.c (sparc64_elf_relocate_section): Likewise.

2000-10-16  Geoffrey Keating  <geoffk@cygnus.com>

	From 2000-10-14  Geoffrey Keating  <geoffk@cygnus.com>
	* elf32-ppc.c (ppc_elf_finish_dynamic_symbol): Don't make PLT
	entries that could serve as a definition for a weak symbol.

2000-10-15  Philip Blundell  <philb@gnu.org>

	From 2000-09-08  Nick Clifton  <nickc@redhat.com>
	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Do not
	initialise flags in output bfd if the input bfd is the default
	architecture with the default flags.

	From 2000-09-03  Philip Blundell  <philb@gnu.org>
	* elf32-arm.h (elf32_arm_relocate_section): Don't try to relocate
	references to undefined symbols in debugging sections.

	From 2000-05-30  H.J. Lu  <hjl@gnu.org>
	* elflink.c (_bfd_elf_link_record_dynamic_symbol): Clear the
	visibility bits if the symbol is undefined. Correctly handle